--- a/low-level-design/4. basic-uml-diagrams.md
+++ b/low-level-design/4. basic-uml-diagrams.md
@@ -275,28 +275,28 @@ Client           :Server          :Database
 **Sequence Diagram (Text-based UML):**
 
 ````
-:Customer      :ShoppingCart   :Product      :OrderService   :Order
-     |             |              |                 |             |
-     |--addItem(product)-->|              |                 |             |
-     |             |(activation)    |                 |             |
-     |             |--getPrice()--->|                 |             |
-     |             |<--price-------|                 |             |
-     |             |     |          |                 |             |
-     |             |<--success-----|                 |             |
-     |             |     |          |                 |             |
-     |--checkout()---->|              |                 |             |
-     |             |(activation)    |                 |             |
-     |             |--getItems()--->|                 |             |
-     |             |<--items-------|                 |             |
-     |             |                 |                 |             |
-     |             |                 |--createOrder(items)-->|             |
-     |             |                 |                 |(activation)   |
-     |             |                 |                 |--create()---->|
-     |             |                 |                 |<--orderCreated--|
-     |             |<--orderInfo----|                 |             |(activation)
-     |             |     |          |                 |             |
-     |<-------------|-----------------|-----------------|-------------|
-     |             |                 |                 |             |
+:Customer      :ShoppingCart   :Product                 :OrderService                :Order
+     |             |                 |                       |                          |
+     |--addItem(product)-->|         |                       |                          |
+     |             |(activation)     |                       |                          |
+     |             |--getPrice()---->|                       |                          |
+     |             |<--price---------|                       |                          |
+     |             |     |           |                       |                          |
+     |             |<--success-------|                       |                          |
+     |             |     |           |                       |                          |
+     |--checkout()---->|             |                       |                          |
+     |             |(activation)     |                       |                          |
+     |             |--getItems()---->|                       |                          |
+     |             |<--items---------|                       |                          |
+     |             |                 |                       |                          |
+     |             |                 |--createOrder(items)-->|                          |
+     |             |                 |                       |(activation)              |
+     |             |                 |                       |--create()--------------->|
+     |             |                 |                       |<--orderCreated-----------|
+     |             |<--orderInfo-----|                       |                          |(activation)
+     |             |                 |                       |                          |
+     |<-------------|----------------|-----------------------|--------------------------|
+     |              |                |                       |                          |
 ````
 
 **Explanation:**
